--- a/css/styles.css
+++ b/css/styles.css
@@ -280,9 +280,7 @@ main a{
     width: 100%;
     max-width: 1200px;
     margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
+    display: flex;
     padding: 45px 0;
 }   
 .footer .footer-container .footer-columns  {
@@ -733,3 +731,51 @@ main a{
     display: block;
     padding: 20px 25px;
 }
+
+@media (min-width: 300px) and (max-width: 480px) {
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    .intro {
+        padding: 1rem 2rem;
+        flex-wrap: wrap;
+    }
+    .img-container {
+        display: none;
+    }
+    .descripciones {
+        padding: 1rem;
+        font-size: 1rem;
+    }
+    .descripciones span {
+        font-size: 2rem;
+    }
+    .descripciones p {
+        font-size: 1rem;
+    }
+    .logos {
+        line-height: 24px;
+        font-size: 24px;
+    }
+    .main-buttons {
+        display: flex;
+        width: max-content;
+    }
+    .cv-btn button {
+        width: max-content;
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+    .about-btn button {
+        width: max-content;
+    }
+    .footer .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 1rem;
+        align-items: center;
+        text-align: center;
+    }
+}   
