--- a/css/styles.css
+++ b/css/styles.css
@@ -113,27 +113,27 @@ main {
 .brand-name {
     font-size: 2rem;
 }
-.intro {
+#intro {
     color: #ffffff;
     display: flex;
     padding: 4rem 12rem;
-    align-items: center;
+    align-items: center !important;
 }
 main a{
     text-decoration: none;
 }
-.descripciones {
+#descripciones {
     padding: 6rem;
     font-size: 2rem;
     font-weight: 200;
 }
-.descripciones span {
+#descripciones span {
     color: #06b6d9;
     font-size: 4rem;
     font-weight: 1200;
     font-family: "Fragment";
 }
-.descripciones p {
+#descripciones p {
     color: #ffffff;
     font-size: 2rem;
 }
@@ -199,40 +199,42 @@ main a{
     border-color: #fff;
     font-weight: bold;
 }
-.projects {
+#projects {
     max-width: 1500px;
     margin: auto;
     padding-bottom: 40px;
 }
-.projects-info-container {
+#projects-info-container {
     width: 100%;
 }
-.projects-info-container h2 {
+#projects-info-container h2 {
     font-family: "Fragment";
     color: #fff;
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 20px;
 }
-.projects-info-container h2 span {
+#projects-info-container h2 span {
     color: #06b6d9;
     font-family: "Fragment";
     font-style: italic;
 }
-.projects-container {
+#projects-container {
     width: 100%;
     display: flex;
+    align-items: center;
+    place-items: center;
     justify-content: space-between;
     padding: 40px 100px;
     border-radius: 16px;
     background-color: #333538;
     transition: all 0.3s ease;
 }
-.projects-container img {
+#projects-container img {
     border-radius: 8px;
     transition: all 0.3s ease
 }
-.projects-container a div {
+#projects-container a div {
     display: block;
     text-align: center;
     background-color: #fff;
@@ -243,7 +245,10 @@ main a{
     color: #212427;
     transition: all 0.3s ease
 }
-.a-link-projects :hover{
+#a-link-projects img {
+    width: 328px;
+}
+#a-link-projects :hover{
     filter: brightness(0.7);
 }
 
@@ -748,21 +753,24 @@ main a{
         margin: 0;
         box-sizing: border-box;
     }
-    .intro {
+
+    /* Home,Footer, Nav */
+
+    #intro {
         padding: 1rem 1rem;
         flex-wrap: wrap;
     }
-    .img-container {
+    #img-container {
         display: none;
     }
-    .descripciones {
+    #descripciones {
         padding: 1rem;
         font-size: 1rem;
     }
-    .descripciones span {
+    #descripciones span {
         font-size: 2rem;
     }
-    .descripciones p {
+    #descripciones p {
         font-size: 1rem;
     }
     .logos {
@@ -802,3 +810,60 @@ main a{
     #nav-container a span {
         display: n;
     }
+    #projects {
+    max-width: 1500px;
+    margin: none;
+    padding-bottom: 40px;
+    }
+    #projects-info-container {
+    width: 100%;
+    }
+    #projects-info-container h2 {
+    font-family: "Fragment";
+    color: #fff;
+    font-size: 32px;
+    font-weight: bold;
+    margin: none;
+    }
+    #projects-info-container h2 span {
+    color: #06b6d9;
+    font-family: "Fragment";
+    font-style: italic;
+    align-items: center;
+    }
+    #projects-container {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    padding: 60px;
+    border-radius: 16px;
+    background-color: #333538;
+    transition: all 0.3s ease;
+    }
+    #projects-container img {
+    border-radius: 8px;
+    transition: all 0.3s ease
+    }
+    #projects-container a div {
+    display: block;
+    text-align: center;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 0 0 8px 8px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #212427;
+    transition: all 0.3s ease
+    }
+    #a-link-projects img {
+        width: 250px;
+        align-items: center;
+        padding-bottom: 20px;
+    }
+    #a-link-projects :hover{
+    filter: brightness(0.7);
+    }
+
+    /* About Page */
+
+    
