--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ main a{
     text-align: center;
     background-color: #fff;
     padding: 10px;
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px;
     font-weight: bold;
     text-decoration: none;
     color: #212427;
@@ -277,28 +277,28 @@ main a{
 
 /* Footer */
 
-.footer {
+#footer {
     width: 100%;
     background-color: rgb(20, 18, 18);
     font-size: 18px;
     position: relative;
     bottom: 0%;
 }
-.footer a {
+#footer a {
     color: #bbbbbb;
     transition: all 0.3s ease;
 }
-.footer a:hover {
+#footer a:hover {
     color: #06b6d9;
 }
-.footer .footer-container {
+#footer #footer-container {
     width: 100%;
     max-width: 1200px;
     margin: auto;
     display: flex;
     padding: 45px 0;
 }   
-.footer .footer-container .footer-columns  {
+#footer #footer-container #footer-columns  {
     width: 100%;
     height: 100%;
     display: flex;
@@ -306,7 +306,11 @@ main a{
     align-items: center;    
     padding: 10px;
 }
-.footer .footer-container .footer-social  {
+#footer #footer-container #footer-columns .indice {
+    margin: 0;
+    padding: 0;
+}
+#footer #footer-container #footer-social  {
     width: 100%;
     height: 100%;
     display: flex;
@@ -314,7 +318,7 @@ main a{
     align-items: center;
     font-size: 32px;
 }
-.footer .footer-container .footer-social a {
+#footer #footer-container #footer-social a {
     display: inline-block;
     text-decoration: none;
     color: #bbbbbb;
@@ -327,17 +331,17 @@ main a{
     border-radius: 50%;
     transition: all 300ms ease;
 }
-.footer .footer-container .footer-social a:hover {
+#footer #footer-container #footer-social a:hover {
     color: #ffffff;
     background-color: #00667a;
 }
-.footer .footer-bottom {
+#footer #footer-bottom {
     background-color: #070707;
     padding: 15px 10px;
     text-align: center;
     color: #ffffff;
 }
-.footer .footer-bottom small {
+#footer #footer-bottom small {
     font-size: 15px;    
 }
 
@@ -475,18 +479,18 @@ main a{
 
 /* About Page */
 
-.about {
+#about {
     color: #ffffff;
     display: flex;
     padding: 4rem 12rem;
     align-items: center;
 }
-.descripciones-about {
+#descripciones-about {
     padding: 6rem;
     font-size: 2rem;
     font-weight: 200;
 }
-.descripciones-about span {
+#descripciones-about span {
     color: #06b6d9;
     font-size: 4rem;
     font-weight: 1200;
@@ -539,17 +543,17 @@ main a{
     border-color: #fff;
     font-weight: 900;
 }
-.aboutme-container {
+#aboutme-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.info-container {
+#info-container {
     display: flex;
     padding: auto;
     justify-content: space-between;
 }
-.more-info {
+#more-info {
     max-width: 1500px;
     margin: auto;
     padding-bottom: 40px;
@@ -557,7 +561,7 @@ main a{
 
 /* Sección Izquierda */
 
-.aptitudes  {
+#aptitudes  {
     display: inline-block;
     padding: 50px;
     background-color: #333538;
@@ -565,14 +569,14 @@ main a{
     box-shadow: 0 0 20px rgb(22, 25, 27);
     width: 720px;
 }
-.aptitudes h2 {
+#aptitudes h2 {
     font-size: 46px;
     font-family: "Fragment";
     font-weight: bold;
     margin-bottom: 40px;
     text-align: center;
 }
-.aptitudes h2 span {
+#aptitudes h2 span {
     color: #06b6d9;
     font-family: "Fragment";
     font-style: italic;
@@ -594,7 +598,7 @@ main a{
 
 /* Sección Derecha */
 
-.habilidades-container {
+#habilidades-container {
     display: inline-block;
     padding: 50px;
     background-color: #333538;
@@ -602,14 +606,14 @@ main a{
     box-shadow: 0 0 20px rgb(22, 25, 27);
     width: 720px;
 }
-.habilidades-container h2{
+#habilidades-container h2{
     font-size: 46px;
     font-family: "Fragment";
     font-weight: bold;
     margin-bottom: 40px;
     text-align: center;
 }
-.habilidades-container h2 span {
+#habilidades-container h2 span {
     color: #06b6d9;
     font-family: "Fragment";
     font-style: italic;
@@ -628,61 +632,64 @@ main a{
     width: 29px;
     text-align: center;
 }
-.education-container {
+
+/* About-Educación */
+
+#education-section {
     max-width: 1500px;
     padding: 40px 0;
     margin: auto;
 }
-.education-container h2 {
+#education-section h2 {
     font-size: 38px;
     font-weight: bold;
     margin: 40px 0;
 }
-.educacion {
+#educacion {
     width: 100%;
 }
-.psp-illustrator {
+#psp-illustrator {
     display: flex;
     justify-content: space-between;
     padding: 30px 20px;
     border-top: 1px solid #535456;
 }
-.uxui {
+#uxui {
     display: flex;
     justify-content: space-between;
     padding: 30px 20px;
     border-top: 1px solid #535456;
 }
-.uxui-avanzado {
+#uxui-avanzado {
     display: flex;
     justify-content: space-between;
     padding: 30px 20px;
     border-top: 1px solid #535456;
 }
-.webd{
+#webd{
     display: flex;
     justify-content: space-between;
     padding: 30px 20px;
     border-top: 1px solid #535456;
 }
-.educacion .left-education h4{
+#educacion .left-education h4{
     font-weight: normal;
 }
-.educacion .left-education h4 span {
+#educacion .left-education h4 span {
     font-weight: bold;
     font-size: 20px;
 }
-.educacion .right-education {
+#educacion .right-education {
     text-align: right;
 }
-.educacion .right-education a {
+#educacion .right-education a {
     color: #fff;
     font-weight: bold;
     font-style: italic;
     text-decoration: none;
     transition: all 0.3s ease;
 }
-.educacion .right-education a:hover {
+#educacion .right-education a:hover {
     color: #06b6d9;
 }
 
@@ -747,7 +754,7 @@ main a{
     padding: 20px 25px;
 }
 
-@media (min-width: 300px) and (max-width: 480px) {
+@media (min-width: 300px) and (max-width: 480px) { 
     * {
         padding: 0;
         margin: 0;
@@ -849,7 +856,7 @@ main a{
     text-align: center;
     background-color: #fff;
     padding: 10px;
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px;
     font-weight: bold;
     text-decoration: none;
     color: #212427;
@@ -866,4 +873,177 @@ main a{
 
     /* About Page */
 
-    
+    #about {
+        color: #ffffff;
+        display: flex;
+        padding: 1rem 1rem;
+        align-items: center;
+    }
+    #descripciones-about {
+        padding: 20px;
+        font-size: 1rem;
+        font-weight: 200;
+    }
+    #descripciones-about span {
+        color: #06b6d9;
+        font-size: 2rem;
+        font-weight: 1200;
+        font-family: "Fragment"; 
+    }
+    .education-btn button {
+        width: max-content;
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+    .contact-btn button {
+        width: max-content;
+    }
+    .education-btn button {
+        width: 100%;
+    }
+    .contact-btn button {
+        width: 100%;
+    }
+    #more-info {
+        max-width: 1500px;
+        margin: auto;
+        padding-bottom: 40px;
+}
+
+/* Sección Izquierda */
+
+    #aptitudes  {
+        margin: 40px 20px;
+        padding: 20px;
+        background-color: #333538;
+        border-radius: 16px;
+        box-shadow: 0 0 20px rgb(22, 25, 27);
+        width: fit-content;
+    }
+    #aptitudes h2 {
+    font-size: 32px;
+    font-family: "Fragment";
+    font-weight: bold;
+    margin-bottom: 40px;
+    text-align: center;
+    }
+    #aptitudes h2 span {
+        color: #06b6d9;
+        font-family: "Fragment";
+        font-style: italic;
+        }
+    .aptitudes-ul {
+        padding: 0 10px;
+    }
+    .aptitudes-ul ul li {
+        padding: 10px 0px;
+        font-size: 20px;
+    }
+    .aptitudes-ul ul li i {
+        margin-right: 20px;
+        font-size: 24px;
+        width: 29px;
+        text-align: center;
+    }
+
+/* Sección Derecha */
+
+    #habilidades-container {
+        margin: 40px 20px;
+        padding: 20px;
+        background-color: #333538;
+        border-radius: 16px;
+        box-shadow: 0 0 20px rgb(22, 25, 27);
+        width: fit-content;
+    }
+    #habilidades-container h2{
+        font-size: 32px;
+        font-family: "Fragment";
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+    #habilidades-container h2 span {
+        color: #06b6d9;
+        font-family: "Fragment";
+        font-style: italic;
+    }
+    .habilidades-ul {
+        padding: 0 10px;
+    }
+    .habilidades-ul ul li {
+        padding: 10px 0px;
+        font-size: 20px;
+    }
+    .habilidades-ul ul li i {
+        margin-right: 20px;
+        font-size: 24px;
+        width: 29px;
+        text-align: center;
+    }
+
+/* About-Educación */
+
+    #education-section {
+        padding: 20px 0;
+        margin: auto;
+    }
+    #education-h2 h2 {
+        font-size: 24px;
+        font-weight: bold;
+        margin: 20px 0;
+    }
+    #educacion {
+        width: 100%;
+    }
+    #psp-illustrator {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 20px;
+        border-top: 1px solid #535456;
+    }
+    #uxui {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 20px;
+        border-top: 1px solid #535456;
+    }
+    #uxui-avanzado {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 20px;
+        border-top: 1px solid #535456;
+    }
+    #webd{
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 20px;
+        border-top: 1px solid #535456;
+    }
+    #educacion .left-education h4{
+        font-weight: normal;
+        font-size: 14px;
+    }
+    #educacion .left-education h4 span {
+        font-weight: bold;
+        font-size: 18px;
+    }
+    #educacion .right-education {
+        text-align: right;
+        font-size: 14px;
+    }
+    #educacion .right-education h4 {
+        text-align: right;
+        font-size: 14px;
+    }
+    #educacion .right-education a {
+        color: #fff;
+        font-weight: bold;
+        font-style: italic;
+        text-decoration: none;
+        transition: all 0.3s ease;
+    }
+    #educacion .right-education a:hover {
+        color: #06b6d9;
+    }
+}
