--- a/css/styles.css
+++ b/css/styles.css
@@ -754,6 +754,78 @@ main a{
     padding: 20px 25px;
 }
 
+/* md-Desktop */
+
+
+
+/* Tablet View */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+    /* Home Page */
+
+    #intro {
+        padding: 20px;
+    }
+    #img-container {
+        display: none;
+    }
+    #descripciones {
+        padding: 20px;
+    }
+    .logos {
+        line-height: 48px;
+        font-size: 48px;
+    }
+    .cv-btn button {
+        width: 100%;
+        font-size: 18px;
+        padding: 10px 20px;
+    }
+    .about-btn button {
+        width: 100%;
+        font-size: 18px;
+        padding: 10px 20px;
+    }
+    #projects {
+        margin: 0px;
+        width: 100%;
+        display: flex;
+    }
+    #projects-info-container {
+        padding: 20px;
+        width: 100%;
+        margin: auto;
+        flex-wrap: wrap;
+    }
+    #projects-container {
+        margin: auto;
+        padding: 0;
+    }
+    #a-link-projects {
+        margin: auto;
+        padding: 20px;
+        display: flex !important;
+        flex-wrap: wrap;
+        justify-content: center;
+    } 
+    #a-link-projects a img {
+        align-items: center;
+        justify-content: center;
+    }
+    #a-link-projects img {
+        width: 500px;
+    }
+    .footer .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+/* Mobile View */
+
 @media (min-width: 300px) and (max-width: 480px) { 
     * {
         padding: 0;
