--- a/css/styles.css
+++ b/css/styles.css
@@ -311,23 +311,20 @@ main a{
     padding: 0;
 }
 #footer #footer-container #footer-social  {
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 32px;
 }
-#footer #footer-container #footer-social a {
-    display: inline-block;
+#footer #footer-container #footer-social a {    
     text-decoration: none;
     color: #bbbbbb;
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
+    width: 70px !important;
+    line-height: 70px !important;
     margin-right: 10px;
     background-color: #212427;
     text-align: center;
-    border-radius: 50%;
+    border-radius: 100%;
     transition: all 300ms ease;
 }
 #footer #footer-container #footer-social a:hover {
