Correción de Errores Sass

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -773,7 +773,7 @@ main a{
 
 /* md-Desktop */
 
-@media (min-width: 1024px) and (max-width: 1279px){
+@media (min-width: 1024px) and (max-width: 1279px) {
 
 /* Home Page */
 
@@ -864,7 +864,7 @@ main a{
                 color: #ffffff;
                 font-size: 1.5rem; 
             }
-
+    }
     /* About-Skills */
 
     #more-info {
