--- a/scss/main.scss
+++ b/scss/main.scss
@@ -652,7 +652,7 @@ main a{
 
 /* About-Educación */
 
-#education-section {
+.education-section {
     max-width: 1500px;
     padding: 40px 0;
     margin: auto;
@@ -773,576 +773,18 @@ main a{
 
 /* md-Desktop */
 
-@media (min-width: 1024px) and (max-width: 1279px) {
-
-/* Home Page */
-
-    #Hero-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    #intro {
-        padding: 3rem 2rem;
-    }
-    #img-container img {
-        width: 300px;
-    }
-    #descripciones {
-        padding-left: 12rem;
-        padding-top: 2rem;
-        font-size: 2rem;
-        font-weight: 200;
-        align-items: center;
-            span {
-                color: $primary-color;
-                font-size: 3rem;
-                font-weight: 1200;
-                font-family: "Fragment";
-            }
-            p {
-                color: #ffffff;
-                font-size: 1.5rem;
-            }
-    }
-    .logos-container {
-        padding: 1rem 0;
-            .logos {
-                font-size: 36px;
-                line-height: 36px;
-            }
-    }
-    #projects {
-        margin: 0px;
-        width: 100%;
-        display: flex;
-    }
-    #projects-info-container {
-        padding: 20px;
-        width: 100%;
-        margin: auto;
-        flex-wrap: wrap;
-    }
-    #projects-container {
-        margin: auto;
-        padding: 0;
-    }
-    #a-link-projects {
-        margin: auto;
-        padding: 20px;
-        display: flex !important;
-        flex-wrap: wrap;
-        justify-content: center;
-            a img {
-                align-items: center;
-                justify-content: center;
-                width: 280px;
-            }
-    } 
-
-/* About Page */
-
-    #about {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem;
-    }
-    #descripciones-about {
-        padding-left: 12rem;
-        padding-top: 2rem;
-        font-size: 2rem;
-        font-weight: 200;
-        align-items: center !important;
-            span {
-                color: $primary-color;
-                font-size: 3rem;
-                font-weight: 1200;
-                font-family: "Fragment";
-            }
-            p {
-                color: #ffffff;
-                font-size: 1.5rem; 
-            }
-    }
-    /* About-Skills */
-
-    #more-info {
-        margin: 0;
-        padding-bottom: 40px;
-    }
-    #info-container {
-        display: flex;
-        justify-content: space-between;
-        margin: 0 20px;
-    }
-    #aptitudes {
-        padding: 20px;
-        width: 450px;
-            h2 {
-                font-size: 36px;
-                margin-bottom: 32px;
-            }
-            ul {
-                padding: 0 30px;
-                li {
-                    padding: 10px;
-                    font-size: 24px;
-                        i {
-                            font-size: 24px;
-                            line-height: 24px;
-                            width: 24px;
-                        }
-                }
-            }
-    }
-    #habilidades-container {
-        padding: 30px;
-        width: 450px;
-            h2 {
-                font-size: 36px;
-                margin-bottom: 32px;
-            }
-    }
-    #habilidades-ul {
-        display: flex;
-        padding: 0 30px;
-            ul li {
-                padding: 10px;
-                font-size: 24px;
-                    i {
-                        font-size: 24px;
-                        line-height: 24px;
-                        width: 24px;
-                    }
-            }
-    }
-
-    /* About-Education Section */
-
-    #education-section {
-        padding: 40px 0;
-        margin: auto;
-            h2 {
-                font-size: 38px;
-                font-weight: bold;
-                margin: 40px 0;
-            }
-    }
-    #educacion {
-        width: 100%;
-            .left-education h4{
-                font-size: 18px;
-                font-weight: normal;
-                    span {
-                        font-weight: bold;
-                        font-size: 20px;
-                    }
-            } 
-            .right-education {
-                text-align: right;
-                    h4 {
-                        font-size: 18px;
-                    }
-                    a {
-                        color: #fff;
-                        font-weight: bold;
-                        font-style: italic;
-                        text-decoration: none;
-                        transition: all 0.3s ease;
-                            &:hover {
-                                color: $primary-color;
-                            }
-                    }
-            }
-    }
-    #psp-illustrator {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 40px;
-        border-top: 1px solid $cards-color;
-    }
-    #uxui {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 40px;
-        border-top: 1px solid $cards-color;
-    }
-    #uxui-avanzado {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 40px;
-        border-top: 1px solid $cards-color;
-    }
-    #webd{
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 40px;
-        border-top: 1px solid $cards-color;
-    }
+@media (min-width: 1024px) and (max-width: 1439px) {
+    @import "desktop-md";
 }
 
 /* Tablet View */
 
 @media (min-width: 768px) and (max-width: 1023px) {
-    
-    /* Home Page */
-
-    #intro {
-        padding: 20px;
-    }
-    #img-container {
-        display: none;
-    }
-    #descripciones {
-        padding: 20px;
-    }
-    .logos {
-        line-height: 48px;
-        font-size: 48px;
-    }
-    .cv-btn button {
-        width: 100%;
-        font-size: 18px;
-        padding: 10px 20px;
-    }
-    .about-btn button {
-        width: 100%;
-        font-size: 18px;
-        padding: 10px 20px;
-    }
-    #projects {
-        margin: 0px;
-        width: 100%;
-        display: flex;
-    }
-    #projects-info-container {
-        padding: 20px;
-        width: 100%;
-        margin: auto;
-        flex-wrap: wrap;
-    }
-    #projects-container {
-        margin: auto;
-        padding: 0;
-    }
-    #a-link-projects {
-        margin: auto;
-        padding: 20px;
-        display: flex !important;
-        flex-wrap: wrap;
-        justify-content: center;
-            a img {
-                align-items: center;
-                justify-content: center;
-                width: 500px;
-            }
-    } 
-    .footer {
-            .footer-container {
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;
-                text-align: center;
-            }
-    }
+    @import "tablet";
 }
 
 /* Mobile View */
 
 @media (min-width: 300px) and (max-width: 480px) { 
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    /* Home,Footer, Nav */
-
-    #intro {
-        padding: 1rem 1rem;
-        flex-wrap: wrap;
-    }
-    #img-container {
-        display: none;
-    }
-    #descripciones {
-        padding: 1rem;
-        font-size: 1rem;
-            span {
-                font-size: 2rem;
-            }
-            p {
-                font-size: 1rem;
-            }
-    }
-    .logos {
-        line-height: 36px;
-        font-size: 36px;
-    }
-    .cv-btn button {
-        width: max-content;
-        padding: 10px 20px;
-        font-size: 14px;
-    }
-    .about-btn button {
-        width: max-content;
-    }
-    .footer {
-            .footer-container {
-                display: flex;
-                flex-wrap: wrap;
-                font-size: 1rem;
-                align-items: center;
-                text-align: center;
-            }
-    }
-    .cv-btn button {
-        width: 100%;
-    }
-    .about-btn button {
-        width: 100%;
-    }
-    #main-nav a:hover {
-        transition:all 300ms ease;
-        text-decoration: none;
-        color: #000000;
-        font-weight: 800;
-        border-radius: 16px;
-        padding: auto;
-        background-color: #ffffff;
-    }
-    #nav-container a span {
-        display: n;
-    }
-    #projects {
-        margin: 0px;
-        width: 100%;
-        display: flex;
-        padding-bottom: 40px;
-    }
-    #projects-info-container {
-        padding: 20px;
-        width: 100%;
-        margin: auto;
-        flex-wrap: wrap;
-            h2 {
-                font-family: "Fragment";
-                color: #fff;
-                font-size: 32px;
-                font-weight: bold;
-                margin: none;
-                    span {
-                        color: $primary-color;
-                        font-family: "Fragment";
-                        font-style: italic;
-                        align-items: center;
-                    }
-            }
-    }
-    #projects-container {
-        margin: auto;
-        padding: 0;
-        display: flex !important;
-            img {
-                border-radius: 8px;
-                transition: all 0.3s ease;
-            }
-            a div {
-                display: block;
-                text-align: center;
-                background-color: #fff;
-                padding: 10px;
-                border-radius: 8px;
-                font-weight: bold;
-                text-decoration: none;
-                color: $bg-color;
-                transition: all 0.3s ease
-            }
-    }
-    #a-link-projects {
-        display: flex;
-        justify-content: center;
-            img {
-                width: 260px;
-                justify-content: center;
-                padding: 20px 0;
-                    &:hover{
-                        filter: brightness(0.7);
-                    }
-            }
-    }
-
-    /* About Page */
-
-    #about {
-        color: #ffffff;
-        display: flex;
-        padding: 1rem 1rem;
-        align-items: center;
-    }
-    #descripciones-about {
-        padding: 20px;
-        font-size: 1rem;
-        font-weight: 200;
-            span {
-                color: $primary-color;
-                font-size: 2rem;
-                font-weight: 1200;
-                font-family: "Fragment"; 
-            }
-    }
-    .education-btn button {
-        width: max-content;
-        padding: 10px 20px;
-        font-size: 14px;
-        width: 100%;
-    }
-    .contact-btn button {
-        width: max-content;
-        width: 100%;
-    }
-    #more-info {
-        max-width: 1500px;
-        margin: auto;
-        padding-bottom: 40px;
-}
-
-/* Sección Izquierda */
-
-    #aptitudes  {
-        margin: 40px 20px;
-        padding: 20px;
-        background-color: $ligth-grey;
-        border-radius: 16px;
-        box-shadow: 0 0 20px rgb(22, 25, 27);
-        width: fit-content;
-            h2 {
-                font-size: 32px;
-                font-family: "Fragment";
-                font-weight: bold;
-                margin-bottom: 40px;
-                text-align: center;
-                    span {
-                        color: $primary-color;
-                        font-family: "Fragment";
-                        font-style: italic;
-                    }
-            }
-    }
-    .aptitudes-ul {
-        padding: 0 10px;
-            ul li {
-                padding: 10px 0px;
-                font-size: 20px;
-                    i {
-                        margin-right: 20px;
-                        font-size: 24px;
-                        width: 29px;
-                        text-align: center;
-                    }
-            }
-    }
-
-/* Sección Derecha */
-
-    #habilidades-container {
-        margin: 40px 20px;
-        padding: 20px;
-        background-color: $ligth-grey;
-        border-radius: 16px;
-        box-shadow: 0 0 20px rgb(22, 25, 27);
-        width: fit-content;
-            h2{
-                font-size: 32px;
-                font-family: "Fragment";
-                font-weight: bold;
-                margin-bottom: 40px;
-                text-align: center;
-                    span {
-                        color: $primary-color;
-                        font-family: "Fragment";
-                        font-style: italic;
-                    }
-            }
-    }
-    .habilidades-ul {
-        padding: 0 10px;
-            ul li {
-                padding: 10px 0px;
-                font-size: 20px;
-                    i {
-                        margin-right: 20px;
-                        font-size: 24px;
-                        width: 29px;
-                        text-align: center;
-                    }
-            }
-    }
-
-/* About-Educación */
-
-    #education-section {
-        padding: 20px 0;
-        margin: auto;
-    }
-    #education-h2 h2 {
-        font-size: 24px;
-        font-weight: bold;
-        margin: 20px 0;
-    }
-    #educacion {
-        width: 100%;
-            .left-education h4{
-                font-weight: normal;
-                font-size: 14px;
-                    span {
-                        font-weight: bold;
-                        font-size: 18px;
-                    }
-            }
-            .right-education {
-                text-align: right;
-                font-size: 14px;
-                    h4 {
-                        text-align: right;
-                        font-size: 14px;
-                        
-                    }
-                    a {
-                        color: #fff;
-                        font-weight: bold;
-                        font-style: italic;
-                        text-decoration: none;
-                        transition: all 0.3s ease;
-                            &:hover {
-                                color: $primary-color;
-                            }
-                    }
-            }
-    }
-    #psp-illustrator {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 20px;
-        border-top: 1px solid $cards-color;
-    }
-    #uxui {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 20px;
-        border-top: 1px solid $cards-color;
-    }
-    #uxui-avanzado {
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 20px;
-        border-top: 1px solid $cards-color;
-    }
-    #webd{
-        display: flex;
-        justify-content: space-between;
-        padding: 30px 20px;
-        border-top: 1px solid $cards-color;
-    }
+    @import "mobile";
 }
